--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^18.2.0",
     "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.1",
     "react-owl-carousel": "^2.3.3",
+    "react-responsive-modal": "^6.4.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
