--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-responsive-modal": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.26.2",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
